projeto vendas add

--- a/responsivo.css
+++ b/responsivo.css
@@ -1,6 +1,6 @@
 @media (max-width: 800px) {
     body {
-       background-color: #ae5d57;
+       background-color: #f5f1f1;
     }
 
     .fundo-video {
