--- a/style copy.css
+++ b/style copy.css
@@ -3,8 +3,9 @@
 /* PROJECTS */
 
 h1 {
-    color: #00561F;
+    color: #d1dad4;
     text-align: center;
+    height: 100px;
 
 }
 
@@ -20,14 +21,15 @@ p {
 
 
 section#projects {
-    height: calc(70vh + 80px);
+    height: calc(100vh + 120px);
     width: 100%;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
+
   }
   
   .project-img {
