--- a/responsivedetails.css
+++ b/responsivedetails.css
@@ -1,6 +1,7 @@
 @media (max-width: 1200px) {
     body {
-        background-color: #806765;
+        background-color: #040404
+        
     }
 
     .fundo-video {
