--- a/style copy.css
+++ b/style copy.css
@@ -28,7 +28,8 @@ section#projects {
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
+    background: #040404;
+    border-top: 1px solid #ffffff;
 
   }
   
